--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "watch": "webpack watch"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,11 @@
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.1"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "sass-loader": "^13.2.1",
+    "style-loader": "^3.3.2",
+    "tailwindcss": "^3.2.7"
   }
 }
